--- a/starter/cloudstorage/src/main/resources/application.properties
+++ b/starter/cloudstorage/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+spring.thymeleaf.cache=false
+## MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/miniPrj?useUnicode=yes&serverTimezone=GMT%2B7
+spring.datasource.username=root
+spring.datasource.password=123456
+
+
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+spring.jpa.open-in-view = false
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size = 10MB
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
